--- a/.settings/org.eclipse.jpt.core.prefs
+++ b/.settings/org.eclipse.jpt.core.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
+entitygen.DEFAULT_PACKAGE=models
 org.eclipse.jpt.core.platform=generic2_1
 org.eclipse.jpt.jpa.core.discoverAnnotatedClasses=true
+org.eclipse.jpt.jpa.core.metamodelSourceFolderName=src/main/java
