Conclusão das funcionalidades no cadastro de setores

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,22 @@
 
 	<mime-mapping>
 		<extension>woff2</extension>
+		<mime-type>application/x-font-woff</mime-type>
+	</mime-mapping>
+
+	<mime-mapping>
+		<extension>woff2</extension>
 		<mime-type>application/x-font-woff2</mime-type>
+	</mime-mapping>
+
+	<mime-mapping>
+		<extension>woff2</extension>
+		<mime-type>application/x-font-eot</mime-type>
+	</mime-mapping>
+
+	<mime-mapping>
+		<extension>woff2</extension>
+		<mime-type>application/x-font-ttf</mime-type>
 	</mime-mapping>
 
 	<context-param>
