--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
 
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>#{temaBean.tema}</param-value>
+		<param-value>#{temaBean.temaSessao.tema}</param-value>
 	</context-param>
     
 </web-app>
