--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
-target/
+/target/*
+target/*
 .project
 src/main/resources/rebel.xml
 
