--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,7 +59,7 @@
  
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>#{temaBean.temaSessao.tema}</param-value>
+		<param-value>#{sessionBean.tema}</param-value>
 	</context-param>
 	
 	<context-param>
